test_yuriiq/catalog/language/german/account/return.php
<?php

// text
$_['text_error']	= 'Die von Ihnen angeforderte kehrt konnte nicht gefunden werden!';
$_['text_comment']	= 'Retourenkommentar';
$_['text_account']	= 'Konto';
$_['text_return_id']	= 'Retourennummer:';
$_['text_empty']	= 'Keine früheren Retouren vorhanden!';
$_['text_description']	= '<p>Bitte das Formular ausfüllen, um eine Retourennummer anzufragen.</p>';
$_['text_date_added']	= 'Hinzugefügt am:';
$_['text_agree']	= 'Ich habe gelesen und akzeptiere die <a class="colorbox" href="%s" alt="%s"><b>%s</b></a>';
$_['text_return']	= 'Retoureninformationen';
$_['text_history']	= 'Retourenhistorie';
$_['text_message']	= '<p>Vielen Dank für die Retourenanforderung. Ihre Anforderung wird an die zuständige Abteilung zur Bearbeitung weitergeleitet.</p><p>Sie werden benachrichtigt, wenn sich der Status der Retoure ändert.</p>';
$_['text_additional']	= 'Zusätzliche Informationen';
$_['text_date_ordered']	= 'Auftragsdatum:';
$_['text_status']	= 'Status:';
$_['text_order']	= 'Auftragsdaten';
$_['text_order_id']	= 'Auftragsnummer:';
$_['text_customer']	= 'Kunde:';
$_['text_product']	= 'Produktinformation & Retourengrund';
$_['text_return_detail']	= 'Angaben zur Rückkehr';

// error
$_['error_captcha']	= 'Verifizierungscode stimmt nicht mit dem im Bild angezeigten Code überein!';
$_['error_product']	= 'Produkt-Name muss größer als 3 und weniger als 255 Zeichen!';
$_['error_firstname']	= 'Vorname muss zwischen 1 und 32 Zeichen lang sein!';
$_['error_email']	= 'Emailadresse ist nicht gültig!';
$_['error_model']	= 'Modell muss zwischen 3 und 24 Zeichen lang sein!';
$_['error_order_id']	= 'Auftragsnummer ist ein Pflichtfeld!';
$_['error_reason']	= 'Sie müssen einen Retourengrund wählen!';
$_['error_telephone']	= 'Telefon muss zwischen 3 und 32 Zeichen lang sein!';
$_['error_lastname']	= 'Nachname muss zwischen 1 und 32 Zeichen lang sein!';
$_['error_agree']	= 'Achtung: Sie müssen auf die Vereinbarung %s!';

// entry
$_['entry_firstname']	= 'Vorname:';
$_['entry_reason']	= 'Rücksendegrund:';
$_['entry_email']	= 'Email:';
$_['entry_product']	= 'Produktname:';
$_['entry_telephone']	= 'Telefon:';
$_['entry_opened']	= 'Produkt ist geöffnet:';
$_['entry_quantity']	= 'Menge:';
$_['entry_model']	= 'Produktnr.:';
$_['entry_captcha']	= 'Bitte den unten dargestellten Code einfügen:';
$_['entry_date_ordered']	= 'Bestelldatum:';
$_['entry_lastname']	= 'Nachname:';
$_['entry_fault_detail']	= 'Defekt oder andere Details:';
$_['entry_order_id']	= 'Auftragsnummer:';

// column
$_['column_model']	= 'Modell';
$_['column_opened']	= 'Geöffnet';
$_['column_date_added']	= 'Hinzugefügt am';
$_['column_product']	= 'Bezeichnung';
$_['column_reason']	= 'Retourengrund';
$_['column_status']	= 'Status';
$_['column_quantity']	= 'Menge';
$_['column_price']	= 'Preis';
$_['column_action']	= 'Aktion';
$_['column_comment']	= 'Kommentar';

// heading
$_['heading_title']	= 'Produktretouren';
?>